fix mobile overflow

--- a/assets/styles/_dashboardStyle.scss
+++ b/assets/styles/_dashboardStyle.scss
@@ -21,7 +21,7 @@
 
 main{
     display: grid;
-    grid-template-rows: 5% 15% 30% 10% 20% 20% 5%;
+    grid-template-rows: 5% 15% 25% 15% 20% 20% 5%;
     grid-template-columns:5% 30% 5% 20% 5% 25% 5% 5%;
     height: 100%;
     .hamburger{
@@ -49,7 +49,7 @@ main{
         grid-row: 4/5;
         grid-column:4/5;
         justify-self: center;
-        align-self:center;
+        align-self:start;
         font-size: 4rem;
         z-index: 1;
         @include fadeAnim;
@@ -57,11 +57,12 @@ main{
 
     .add-btn{
         font-size: 3rem;
-        margin-bottom: 1rem;
+        // margin-bottom: 1rem;
         grid-row: 6/7;
         grid-column: 4/5;
         z-index: 1;
         justify-self: center;
+        align-self: start;
         cursor: pointer;
         @include hover;
     }
