--- a/assets/styles/_waveStyles.scss
+++ b/assets/styles/_waveStyles.scss
@@ -55,7 +55,6 @@
     grid-column: 3/6;
     grid-row: 5/6;
     text-align: center;
-    margin-top: 15px;
     z-index: 1;
 }
 
