--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -112,7 +112,6 @@
   grid-column: 3/6;
   grid-row: 5/6;
   text-align: center;
-  margin-top: 15px;
   z-index: 1;
 }
 
@@ -142,7 +141,7 @@
 
 main {
   display: grid;
-  grid-template-rows: 5% 15% 30% 10% 20% 20% 5%;
+  grid-template-rows: 5% 15% 25% 15% 20% 20% 5%;
   grid-template-columns: 5% 30% 5% 20% 5% 25% 5% 5%;
   height: 100%;
 }
@@ -176,7 +175,7 @@ main .amount-drank {
   grid-row: 4/5;
   grid-column: 4/5;
   justify-self: center;
-  align-self: center;
+  align-self: start;
   font-size: 4rem;
   z-index: 1;
   animation: fadeIn 0.5s ease-in;
@@ -184,11 +183,11 @@ main .amount-drank {
 
 main .add-btn {
   font-size: 3rem;
-  margin-bottom: 1rem;
   grid-row: 6/7;
   grid-column: 4/5;
   z-index: 1;
   justify-self: center;
+  align-self: start;
   cursor: pointer;
   transition: all 0.5s ease;
 }
